# CPP_OGL_TEMPL

./: .gitignore  CMakeLists.txt  README.md  debug_build.bat  debug_build.sh  rel_build.bat  rel_build.sh
assets/shaders/: basic.frag  basic.vert
include/: Application.h  stb_image.h
include/input/: Input.h
include/renderer/: Buffer.h  Shader.h  Texture.h  VertexArray.h
src/: Application.cpp  main.cpp
src/input/: Input.cpp
src/renderer/: Buffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
